[CI]: Perform docs re-gen on master only

--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -43,7 +43,7 @@
     --code-background: var(--dark-code-background);
 } }
 
-:root[data-theme='light'] {
+body.light {
     --hl-0: var(--light-hl-0);
     --hl-1: var(--light-hl-1);
     --hl-2: var(--light-hl-2);
@@ -55,7 +55,7 @@
     --code-background: var(--light-code-background);
 }
 
-:root[data-theme='dark'] {
+body.dark {
     --hl-0: var(--dark-hl-0);
     --hl-1: var(--dark-hl-1);
     --hl-2: var(--dark-hl-2);
